# FlightSimulator

./: CMakeLists.txt  Command.h  CommandsMap.h  DataReaderServer.cpp  DataReaderServer.h  GlobalMap.cpp  GlobalMap.h  MyException.cpp  MyException.h  OperationPriority.cpp  OperationPriority.h  Parser.cpp  Parser.h  ShuntingYard.cpp  ShuntingYard.h  Utils.cpp  Utils.h  log.txt  main.cpp
AllCommands/: OpenServerCommand.cpp  OpenServerCommand.h
Global/: CommandsMap.h  VarMap.cpp  VarMap.h
commands/: BindCommand.cpp  BindCommand.h  Command.h  ConditionCommand.cpp  ConditionCommand.h  ConnectCommand.cpp  ConnectCommand.h  CreateCommand.cpp  CreateCommand.h  GetCommand.cpp  GetCommand.h  HeadingCommand.cpp  HeadingCommand.h  IfCommand.cpp  IfCommand.h  IsVarExistsCommand.cpp  IsVarExistsCommand.h  LoopCommand.cpp  LoopCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  PrintCommand.cpp  PrintCommand.h  SetCommand.cpp  SetCommand.h  SleepCommand.cpp  SleepCommand.h
data/: BoundedVar.h  MyException.h  Semaphore.h  Var.h
expressions/: And.h  Binary.h  Divide.h  Equals.h  Expression.h  GreaterThan.h  LessThan.h  Minus.h  Multiply.h  Negative.h  Not.h  NotEquals.h  Number.h  Or.h  Plus.h  Unary.h
input/: LexicalAnalyzer.cpp  LexicalAnalyzer.h  OperationPriority.cpp  OperationPriority.h  Parser.cpp  Parser.h  ParsingUtils.cpp  ParsingUtils.h  ShuntingYard.cpp  ShuntingYard.h  Utils.cpp  Utils.h
maps/: CommandsMap.h  VarMap.cpp  VarMap.h
reader/: ConnectReaderClient.cpp  ConnectReaderClient.h  ConnectionsHandler.cpp  ConnectionsHandler.h  ConnectionsManager.cpp  ConnectionsManager.h  DataReaderServer.cpp  DataReaderServer.h
